# MinorProject

./: .gitignore  .pre-commit-config.yaml  faculty_data.py  pyproject.toml  scrape.py
Frontend_template/: activity_detail.html  faculty.html
deptWebsite/: .pre-commit-config.yaml  db.sqlite3  manage.py  requirements.txt
deptWebsite/academics/: admin.py  forms.py  models.py  urls.py  views.py
deptWebsite/activities/: admin.py  forms.py  models.py  urls.py  views.py
deptWebsite/activities/migrations/: 0001_initial.py  0002_activity_cover_image.py  0003_alter_activityimage_activity.py  0004_alter_activity_managers_activity_activity_type_and_more.py  0004_auto_20220307_1831.py
deptWebsite/activities/templates/: activities.html  activity_detail.html  activity_detail.html~~
deptWebsite/deptWebsite/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
deptWebsite/faculty/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
deptWebsite/faculty/migrations/: 0001_initial.py  0002_initial.py
deptWebsite/home/: admin.py  forms.py  models.py  urls.py  views.py
deptWebsite/infra/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
deptWebsite/infrastructure/: urls.py  views.py
deptWebsite/register_login/: forms.py  urls.py  views.py
deptWebsite/static/: toastify.js
deptWebsite/students/: admin.py  forms.py  models.py  urls.py  views.py
deptWebsite/whitelabel/: admin.py  forms.py  models.py  urls.py  views.py
frontend/: activity.html  activity_detail.html  faculty.html  faculty.html~~  index.html  infra.html  profile.html
(+110 files in other folders)
