[tool.poetry]
name = "deptwebsite"
version = "0.1.0"
description = ""
authors = ["Gupta-Anubhav12 <anubhavgupta2260@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "1.4.4"
asgiref = "3.5.0"
"backports.zoneinfo" = "0.2.1"
black = "22.3.0"
certifi = "2021.10.8"
cffi = "1.15.0"
cfgv = "3.3.1"
charset-normalizer = "2.0.12"
click = "8.1.2"
cryptography = "36.0.2"
defusedxml = "0.7.1"
distlib = "0.3.4"
Django = "4.0.2"
django-cleanup = "6.0.0"
django-phonenumber-field = "6.1.0"
django-phonenumbers = "1.0.1"
django-tinymce = "3.4.0"
django-widget-tweaks = "1.4.12"
filelock = "3.4.2"
identify = "2.4.3"
idna = "3.3"
importlib-metadata = "4.10.1"
Jinja2 = "3.0.3"
MarkupSafe = "2.0.1"
mypy-extensions = "0.4.3"
nodeenv = "1.6.0"
oauthlib = "3.2.0"
pathspec = "0.9.0"
pep517 = "0.6.0"
phonenumbers = "8.12.46"
Pillow = "9.1.0"
platformdirs = "2.4.1"
pre-commit = "2.16.0"
pycparser = "2.21"
PyJWT = "2.3.0"
python3-openid = "3.2.0"
pytoml = "0.1.21"
PyYAML = "5.4.1"
requests = "2.27.1"
requests-oauthlib = "1.3.1"
six = "1.16.0"
slippers = "0.3.1"
social-auth-app-django = "5.0.0"
social-auth-core = "4.2.0"
sqlparse = "0.4.2"
toml = "0.10.2"
tomli = "2.0.1"
typing-extensions = "4.1.1"
urllib3 = "1.26.9"
virtualenv = "20.13.0"
zipp = "3.7.0"
djhtml = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
